Add colorama and matplotlib packages

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ backtrader = "*"
 jupyter = "*"
 ipython = "*"
 python-binance = "*"
+colorama = "*"
+matplotlib = "*"
 
 [dev-packages]
 black = "*"
